<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".MainActivity">


    <View
        android:id="@+id/topBG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/main_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5" />

    <TextView
        android:id="@+id/profile_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/Profile_Settings"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/topBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/photo_test"
        app:layout_constraintBottom_toBottomOf="@+id/topBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedCorners" />

    <TextView
        android:id="@+id/profile_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/Profile_Username"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/topBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topBG"
        tools:text="Name Surname" />

    <TextView
        android:id="@+id/profile_Top2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="88dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/Profile_Career"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/topBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topBG" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="306dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/Profile_address"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/topBG"
        app:layout_constraintEnd_toEndOf="@+id/topBG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/profile_edit_profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBG">

        <ImageView
            android:id="@+id/profile_facebook_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/facebook_logo" />

        <ImageView
            android:id="@+id/profile_linkedin_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/linkedin_logo" />

        <ImageView
            android:id="@+id/profile_instagram_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/instagram_logo" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_edit_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button"
        android:fontFamily="@font/open_sans"
        android:text="@string/Profile_Edit_Profile"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBG" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_view_my_contacts_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/orange_button"
        android:fontFamily="@font/open_sans"
        android:text="@string/Profile_view_my_contacts"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBG" />


</androidx.constraintlayout.widget.ConstraintLayout>